css fixes and js overlap

--- a/css/core_kit7.css
+++ b/css/core_kit7.css
@@ -8864,9 +8864,6 @@
 
 
 
-.main-slider {
-    padding-left: 10%;
-}
 .app-feature svg {
     width: 30%;
     color: white;
